[package]
name = "vpp-bonjour"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
minreq = { version = "2.3.0", features = ["https-rustls", "json-using-serde"] }
clap = "3.0.0-beta.2"
latest_vpp_api = { version = "*", git ="https://github.com/ayourtch/latest-vpp-api" }
vpp-api-encoding = { version = "*", git ="https://github.com/ayourtch/vpp-api-encoding" }
bincode = "*"
vpp-api-transport = "*"

